0527 minor fix
count clients, add missing prefix for fb2k message, fix nickname whitespace on chat

--- a/public/components/chat.css
+++ b/public/components/chat.css
@@ -29,6 +29,7 @@
     width: 13%;
     font-size: 20px;
     font-weight: 700;
+    white-space: nowrap;
     color: var(--nick-yellow);
 }
 
